--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table cellspacing = 20>
       <tr>
         <td><img src="images/Tony.jpg" width="250" height="250" alt="Tony's Profile Pic"></td>
-        <td><h1>Tony Richie and Jayden</h1>
+        <td><h1>Tony Richie</h1>
         <p><em>Software Developer</em></p>
         <p>A technically skilled and amazing person. </p></td>
       </tr>
