reworded some text

--- a/hobbies.html
+++ b/hobbies.html
@@ -10,7 +10,7 @@
       <li>3d Printing</li>
       <li>3d Modeling</li>
       <li>Computer Building</li>
-      <li>🤣Playing with Jayden</li>
+      <li>Motorcycles</li>
     </ol>
   </body>
 </html>
